--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.0.0",
     "dustjs-linkedin": "^2.5.1",
     "express": "~4.9.0",
+    "express-autoprefixer": "^2.1.1",
     "express-less": "0.0.6",
     "fb": "^0.7.0",
     "morgan": "~1.3.0",
