--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-autoprefixer": "^2.1.1",
     "express-less": "0.0.6",
     "fb": "^0.7.0",
+    "insubnet": "0.0.8",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3"
   },
